[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keypass-importer"
version = "0.1.0"
description = "Import KeePass .kdbx databases into CyberArk Privilege Cloud"
requires-python = ">=3.11"
dependencies = [
    "pykeepass>=4.1.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.34.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
keypass-importer = "keypass_importer.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
